<resources>
    <string name="app_name">ParkPal</string>
    <string name="Park">Park</string>
    <string name="Pal">Pal</string>
    <string name="Thessaloniki">Honolulu</string>
    <string name="ImageInfo">Info</string>
    <string name="StringOne"><![CDATA[Easier & faster parking payments]]></string>
    <string name="StringTwo">Monitoring available parking spots and notifying</string>
    <string name="StringThree">Easy to expand and possible to interrupt</string>
    <string name="Account">Register</string>
    <string name="Tomorrow">If you start a new parking, it will be scheduled for tomorrow at 08:00.</string>
    <string name="Account2">Login</string>
    <string name="Parking">New Parking</string>
    <string name="ScanPay"><![CDATA[Scan & Pay]]></string>
    <string name="FreeParking">Free</string>
    <string name="PaidParking">08:00 – 21:00</string>
    <string name="Arrow">Arrow</string>
    <string name="ToCreateAccount">Create your account here</string>
    <string name="Map">Map</string>
    <string name="Wallet">Wallet</string>
    <string name="History">History</string>
    <string name="RegisterString"><u>Create an account:</u></string>
    <string name="nomoney">0.00€</string>
    <string name="funds">Balance</string>
    <string name="comma">,</string>
    <string name="deposit">Deposit</string>
    <string name="ten">10€</string>
    <string name="twenty">20€</string>
    <string name="fifty">50€</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Sector">Sector</string>
    <string name="Plate">Licence Plate</string>
    <string name="Register">Don\'t have an account yet? Register here</string>
    <string name="Empty" />
    <string name="Reg">Register</string>
</resources>