<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ScanPayButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/ScanPay"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_fullscreen_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="22dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newParkButton"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintOverlap" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="416dp"
        android:layout_height="101dp"
        android:background="@drawable/honolulu"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/ParkPalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Park"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/Pal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Pal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:text="@string/Pal"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/ParkPalView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ParkPalView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintOverlap" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="319dp"
        android:layout_height="246dp"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.284">


        <ImageView
            android:id="@+id/Arrow_one"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/Arrow"
            app:layout_constraintBottom_toBottomOf="@+id/EasierView"
            app:layout_constraintEnd_toStartOf="@+id/EasierView"
            app:layout_constraintTop_toTopOf="@+id/EasierView"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />

        <ImageView
            android:id="@+id/Arrow_two"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/Arrow"
            app:layout_constraintBottom_toBottomOf="@+id/TrackView"
            app:layout_constraintEnd_toStartOf="@+id/TrackView"
            app:layout_constraintTop_toTopOf="@+id/TrackView"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />


        <ImageView
            android:id="@+id/Arrow_three"
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ImageInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_info_24" />

        <TextView
            android:id="@+id/EasierView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/StringOne"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />

        <TextView
            android:id="@+id/TrackView"
            android:layout_width="183dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/StringTwo"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/EasierView"
            app:layout_constraintTop_toBottomOf="@+id/EasierView" />

        <TextView
            android:id="@+id/ExpandView"
            android:layout_width="182dp"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/StringThree"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/TrackView"
            app:layout_constraintTop_toBottomOf="@+id/TrackView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ExpandView"
            app:layout_constraintEnd_toStartOf="@+id/ExpandView"
            app:layout_constraintTop_toTopOf="@+id/ExpandView"
            app:srcCompat="@drawable/baseline_arrow_forward_24" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/RegisterString"
            android:textColor="@color/nice_blue"
            android:textSize="14sp"
            android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
            app:layout_constraintBottom_toTopOf="@+id/EasierView"
            app:layout_constraintEnd_toEndOf="@+id/Arrow_three"
            app:layout_constraintStart_toStartOf="@+id/Arrow_three"
            app:layout_constraintTop_toBottomOf="@+id/Arrow_three" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="142dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds,TextSizeCheck">

        <TextView
            android:id="@+id/TomorrowField"
            android:layout_width="88dp"
            android:layout_height="14dp"
            android:layout_marginTop="2dp"
            android:text="Tomorrow · Monday"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@+id/MonthSecondView"
            app:layout_constraintTop_toBottomOf="@+id/MonthSecondView"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/MonthSecondView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="February 2025"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <TextView
            android:id="@+id/TomorrowView"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:fontFamily="sans-serif-thin"
            android:text="31"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            tools:ignore="VisualLintOverlap" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:layout_constraintVertical_bias="0.043"
            app:srcCompat="@drawable/baseline_calendar_today_24" />

        <TextView
            android:id="@+id/NewParkView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Tomorrow"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_calendar_today_24" />

        <TextView
            android:id="@+id/TodayView"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:fontFamily="sans-serif-thin"
            android:text="30"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/MonthFirstView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="February 2025"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/TodayFIeld"
            android:layout_width="90dp"
            android:layout_height="13dp"
            android:layout_marginTop="2dp"
            android:text="Today · Sunday"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@+id/MonthFirstView"
            app:layout_constraintTop_toBottomOf="@+id/MonthFirstView"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/FirstDayPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/FreeParking"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/TodayFIeld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MonthFirstView"
            app:layout_constraintTop_toTopOf="@+id/MonthFirstView" />

        <TextView
            android:id="@+id/SecondDayPriceView"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/PaidParking"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/TomorrowField"
            app:layout_constraintStart_toStartOf="@+id/FirstDayPriceView"
            app:layout_constraintTop_toTopOf="@+id/MonthSecondView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/newParkButton"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:layout_marginBottom="41dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Parking"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="22dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/ScanPayButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="416dp"
        android:layout_height="61dp"
        android:background="@color/nice_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/nice_blue"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_directions_car_24"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MapButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/MapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nice_blue"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Map"
        android:textColor="@color/white"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_map_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WalletButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CarButton" />

    <Button
        android:id="@+id/HistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/nice_blue"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/History"
        android:textColor="@color/white"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_history_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/WalletButton" />

    <Button
        android:id="@+id/WalletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/nice_blue"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/Wallet"
        android:textColor="@color/white"
        android:theme="@style/Theme.Material3.Dark.BottomSheetDialog"
        app:icon="@drawable/baseline_wallet_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/HistoryButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MapButton" />

</androidx.constraintlayout.widget.ConstraintLayout>